Bump org.jetbrains.changelog from 1.1.2 to 1.2.1 (#139)
* Bump org.jetbrains.changelog from 1.1.2 to 1.2.1

Bumps org.jetbrains.changelog from 1.1.2 to 1.2.1.

---
updated-dependencies:
- dependency-name: org.jetbrains.changelog
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Fix build.gradle

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Marius Höfler <marius.hoefler@yahoo.de>
Co-authored-by: Marius Höfler <29115214+marius-h@users.noreply.github.com>